# Template_CMake

./: CMakeLists.txt  vcpkg.json
cmake/: asio.cmake  vcpkg.cmake
src/: main.cpp
